update REAME, Add more comments to notebook

--- a/BirdsOfAL.ipynb
+++ b/BirdsOfAL.ipynb
@@ -1295,13 +1295,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Red-winged Blackbird Males and females look different"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Cleaning Up"
    ]
   },
@@ -1692,7 +1685,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1720,38 +1715,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "@app.route(\"/classify-url\", methods=[\"GET\"])\n",
-    "async def classify_url(request):\n",
-    "    bytes = await get_bytes(request.query_params[\"url\"])\n",
-    "    img = open_image(BytesIO(bytes))\n",
-    "    _,_,losses = learner.predict(img)\n",
-    "    return JSONResponse({\n",
-    "        \"predictions\": sorted(\n",
-    "            zip(cat_learner.data.classes, map(float, losses)),\n",
-    "            key=lambda p: p[1],\n",
-    "            reverse=True\n",
-    "        )\n",
-    "    })"
+    "One more comment:\n",
+    "1. Red-winged Blackbird Males and females look different. It is maybe not that impressive that the classifier has learned that both are the same class, but it is interesting.\n",
+    "![Red-winged Blackbird](http://www.paulnoll.com/Oregon/Birds/Home/birds-Blackbird-Red-winged.jpg \"Red-winged Blackbird\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
